# youth-economic-opportunity-index

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
data/: data_dictionary.md
data/raw/: candidate_review.csv  city_panel.csv  city_panel_fix_backup.csv  city_panel_old.csv  communique_panel.csv  data_quality_report.csv  data_sources.csv  download_links.md  jiangxi_2022_keji_gongbao.html  jiangxi_2023_keji_gongbao.html  manual_source_observations.csv  missing_data_report.csv  missing_data_summary.md  quality_notes.md  quality_report.md  source_documents.csv  source_observations.csv  source_observations_old.csv
docs/: architecture.md  data-design.md  data_improvement_log.md  methodology.md  notebook-analysis-plan.md  overview.md  project-design.md
notebooks/: 01_data_sources.ipynb  02_data_cleaning.ipynb  03_exploratory_analysis.ipynb  04_index_calculation.ipynb  05_explanatory_model.ipynb
scripts/: batch_search_gaps.py  fetch_high_tech_companies.py  fetch_rd_2024_playwright.py  fetch_rd_2024_v2.py  fetch_rd_budget_playwright.py  fetch_youth_platform_jobs.py  generate_readme_charts.py  generate_year_specific_employment.py  validate_observations.py
src/uei/: __init__.py  build_index.py  clean_data.py  communique_fetch.py  communique_manifest.py  communique_ocr.py  communique_sources.py  config.py  data_quality.py  download_data.py  house_price_yuan.py  sensitivity.py  visualize.py
src/yei/: __init__.py  build_index.py  city_names.py  (+11 more)
tests/: test_build_index.py  test_data_quality.py  test_streamlit_app.py  test_validate.py  test_visualize.py
