[project]
name = "youth-economic-opportunity-index"
version = "0.1.0"
description = "Youth Economic Opportunity Index (YEOI) — a data-driven analysis of urban economic opportunity for young professionals in China"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "cn-stats>=0.1.3",
    "linearmodels>=6.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "paddleocr>=3.4.1",
    "paddlepaddle>=3.3.1",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "plotly>=6.8.0",
    "pypdf>=6.13.3",
    "requests>=2.34.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "jupyter",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[project.scripts]
yeoi-build = "yei.build_index:main"
yeoi-download = "yei.download_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yei"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "app"]
